--- a/Armut CaseStudy/View/All Services/Header/ServicesHeader.xib
+++ b/Armut CaseStudy/View/All Services/Header/ServicesHeader.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -10,45 +10,51 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="servicesHeaderReuseId" id="NGV-XK-xA1" customClass="ServicesHeader" customModule="Armut_CaseStudy" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="676"/>
+            <rect key="frame" x="0.0" y="0.0" width="834" height="1194"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="7ek-6b-qc7">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="636"/>
+                    <rect key="frame" x="0.0" y="0.0" width="834" height="1154"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="iTd-2v-7th">
-                            <rect key="frame" x="2.3333333333333428" y="0.0" width="370.33333333333326" height="410"/>
+                            <rect key="frame" x="106" y="0.0" width="622" height="689"/>
                             <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="iTd-2v-7th" secondAttribute="height" multiplier="1438:1592" id="MPe-JM-Fq5"/>
                             </constraints>
                         </imageView>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IYz-rj-B4u">
-                            <rect key="frame" x="40" y="450" width="295" height="186"/>
+                            <rect key="frame" x="80" y="729" width="674" height="425"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding" translatesAutoresizingMaskIntoConstraints="NO" id="hno-ln-tZT">
-                                    <rect key="frame" x="0.0" y="0.0" width="295" height="186"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="674" height="425"/>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DfT-dp-jX2">
-                                    <rect key="frame" x="0.0" y="0.0" width="295" height="125"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="674" height="285.5"/>
                                     <subviews>
                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8UZ-Kt-sqR">
-                                            <rect key="frame" x="191.66666666666666" y="27.333333333333314" width="93.333333333333343" height="70.333333333333329"/>
+                                            <rect key="frame" x="451" y="62.5" width="213" height="160.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="7Y0-XN-VrX">
-                                                    <rect key="frame" x="15.000000000000004" y="13.000000000000004" width="63.333333333333343" height="44.333333333333343"/>
+                                                    <rect key="frame" x="15" y="40.5" width="183" height="79"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-15%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="639-3A-hvX">
-                                                            <rect key="frame" x="7" y="0.0" width="49.333333333333336" height="24"/>
+                                                            <rect key="frame" x="48" y="0.0" width="86.5" height="43"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                             <color key="textColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
+                                                            <variation key="heightClass=regular-widthClass=regular">
+                                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="36"/>
+                                                            </variation>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="İNDİRİM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="meu-Xg-5lC">
-                                                            <rect key="frame" x="0.0" y="24.000000000000057" width="63.333333333333336" height="20.333333333333329"/>
+                                                            <rect key="frame" x="36.5" y="43" width="110" height="36"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                             <color key="textColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
+                                                            <variation key="heightClass=regular-widthClass=regular">
+                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="30"/>
+                                                            </variation>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
@@ -74,22 +80,28 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aN8-hi-pbs">
-                                    <rect key="frame" x="0.0" y="125" width="295" height="61"/>
+                                    <rect key="frame" x="0.0" y="285.5" width="674" height="139.5"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="xZX-Hf-Xqw">
-                                            <rect key="frame" x="15" y="8" width="265" height="44.666666666666664"/>
+                                            <rect key="frame" x="15" y="40.5" width="644" height="58"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FIRST TIME NEWLY WEDS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qs2-Xa-1V9">
-                                                    <rect key="frame" x="0.0" y="0.0" width="265" height="13.333333333333334"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="644" height="26.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
+                                                    <variation key="heightClass=regular-widthClass=regular">
+                                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
+                                                    </variation>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WEDDING PHOTOGRAPHERS FROM 540 TL" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OFX-fu-bCa">
-                                                    <rect key="frame" x="0.0" y="13.333333333333369" width="265" height="31.333333333333329"/>
+                                                    <rect key="frame" x="0.0" y="26.5" width="644" height="31.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
+                                                    <variation key="heightClass=regular-widthClass=regular">
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
+                                                    </variation>
                                                 </label>
                                             </subviews>
                                         </stackView>
@@ -127,18 +139,25 @@
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="IYz-rj-B4u" secondAttribute="trailing" constant="40" id="GhD-Nv-ROc"/>
-                        <constraint firstItem="IYz-rj-B4u" firstAttribute="leading" secondItem="7ek-6b-qc7" secondAttribute="leading" constant="40" id="W4k-KX-fLV"/>
+                        <constraint firstAttribute="trailing" secondItem="IYz-rj-B4u" secondAttribute="trailing" constant="40" id="GhD-Nv-ROc">
+                            <variation key="heightClass=regular-widthClass=regular" constant="80"/>
+                        </constraint>
+                        <constraint firstItem="IYz-rj-B4u" firstAttribute="leading" secondItem="7ek-6b-qc7" secondAttribute="leading" constant="40" id="W4k-KX-fLV">
+                            <variation key="heightClass=regular-widthClass=regular" constant="80"/>
+                        </constraint>
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zJV-PZ-E2O">
-                    <rect key="frame" x="20" y="74" width="335" height="43"/>
+                    <rect key="frame" x="20" y="84" width="794" height="60"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hizmet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hs0-4L-TSc">
-                            <rect key="frame" x="0.0" y="0.0" width="335" height="43"/>
+                            <rect key="frame" x="0.0" y="0.0" width="794" height="60"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                             <color key="textColor" red="0.066854350270000001" green="0.073513232169999998" blue="0.12941855190000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
+                            <variation key="heightClass=regular-widthClass=regular">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
+                            </variation>
                         </label>
                     </subviews>
                 </stackView>
@@ -147,7 +166,9 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="EAS-j6-KJl" firstAttribute="bottom" secondItem="7ek-6b-qc7" secondAttribute="bottom" constant="40" id="9Tc-tL-e0J"/>
-                <constraint firstItem="zJV-PZ-E2O" firstAttribute="top" secondItem="EAS-j6-KJl" secondAttribute="top" constant="30" id="CKH-jx-xp3"/>
+                <constraint firstItem="zJV-PZ-E2O" firstAttribute="top" secondItem="EAS-j6-KJl" secondAttribute="top" constant="30" id="CKH-jx-xp3">
+                    <variation key="heightClass=regular-widthClass=regular" constant="60"/>
+                </constraint>
                 <constraint firstItem="zJV-PZ-E2O" firstAttribute="leading" secondItem="EAS-j6-KJl" secondAttribute="leading" constant="20" id="MsJ-jk-68i"/>
                 <constraint firstItem="7ek-6b-qc7" firstAttribute="leading" secondItem="EAS-j6-KJl" secondAttribute="leading" id="Q4h-Ci-oVg"/>
                 <constraint firstItem="EAS-j6-KJl" firstAttribute="trailing" secondItem="zJV-PZ-E2O" secondAttribute="trailing" constant="20" id="c2x-zK-ISG"/>
@@ -157,7 +178,7 @@
             <connections>
                 <outlet property="lblTitle" destination="Hs0-4L-TSc" id="pbw-fK-qll"/>
             </connections>
-            <point key="canvasLocation" x="-53.600000000000001" y="218.7192118226601"/>
+            <point key="canvasLocation" x="11.1328125" y="285.94436310395315"/>
         </collectionReusableView>
     </objects>
     <resources>
