--- a/Armut CaseStudy/View/All Services/Items/PopularItemView.xib
+++ b/Armut CaseStudy/View/All Services/Items/PopularItemView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -10,10 +10,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="popularItemViewReuseId" id="267-Td-7sb" customClass="PopularItem" customModule="Armut_CaseStudy" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="140"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="167"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="nCc-x7-cck">
-                <rect key="frame" x="0.0" y="0.0" width="150" height="140"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="167"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="s3T-RL-f8M" customClass="DownloaderImageView" customModule="Armut_CaseStudy" customModuleProvider="target">
@@ -28,11 +28,14 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kalorifer ve Doğalgaz Tesisatı" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TcC-xz-dtH">
-                        <rect key="frame" x="0.0" y="98" width="150" height="31.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TcC-xz-dtH">
+                        <rect key="frame" x="0.0" y="98" width="150" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                        </variation>
                     </label>
                 </subviews>
                 <constraints>
@@ -44,12 +47,12 @@
                     <constraint firstItem="s3T-RL-f8M" firstAttribute="leading" secondItem="nCc-x7-cck" secondAttribute="leading" id="o89-U0-rin"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="150" height="140"/>
+            <size key="customSize" width="150" height="167"/>
             <connections>
                 <outlet property="imgService" destination="s3T-RL-f8M" id="SWj-ie-PAH"/>
                 <outlet property="lblServiceName" destination="TcC-xz-dtH" id="FkK-iO-SI7"/>
             </connections>
-            <point key="canvasLocation" x="340.57971014492756" y="99.776785714285708"/>
+            <point key="canvasLocation" x="340.4296875" y="105.63689604685212"/>
         </collectionViewCell>
     </objects>
 </document>
